v0.5/dev/ros2_uav_px4/_sources/generated/program_listing_file_include_ros2_uav_px4_mode_interface_mode_interface.hpp.rst.txt

.. _program_listing_file_include_ros2_uav_px4_mode_interface_mode_interface.hpp:

Program Listing for File mode_interface.hpp
===========================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_ros2_uav_px4_mode_interface_mode_interface.hpp>` (``include/ros2_uav_px4/mode_interface/mode_interface.hpp``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   // Copyright 2024 Damien SIX (damien@robotsix.net)
   //
   // Licensed under the Apache License, Version 2.0 (the "License");
   // you may not use this file except in compliance with the License.
   // You may obtain a copy of the License at
   //
   //     http://www.apache.org/licenses/LICENSE-2.0
   //
   // Unless required by applicable law or agreed to in writing, software
   // distributed under the License is distributed on an "AS IS" BASIS,
   // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   // See the License for the specific language governing permissions and
   // limitations under the License.
   
   #pragma once
   
   #include <memory>
   #include <vector>
   #include <string>
   #include <uav_cpp/parameters/param_container.hpp>
   #include <px4_ros2/components/mode.hpp>
   #include <uav_cpp/components/mode.hpp>
   #include <ros2_uav_interfaces/msg/coordinate.hpp>
   #include "ros2_uav_px4/utils/tf2_eigen.hpp"
   
   namespace ros2_uav::modes
   {
   using uav_cpp::parameters::ParamContainer;
   using uav_cpp::utils::Coordinate;
   using px4_ros2::ModeBase;
   using uav_ros2::utils::eigenNedToTf2Nwu;
   using uav_ros2::utils::tf2FwuToEigenNed;
   
   template<typename ModeT>
   concept DerivedFromUavCppMode = requires(ModeT mode)
   {
     [] < typename ... T > (uav_cpp::components::Mode<T...> &) {} (mode);
   };
   
   template<typename ModeT>
   class ModeInterface : public ModeBase, public ParamContainer
   {
   public:
     ModeInterface(const ModeBase::Settings & mode_settings, rclcpp::Node & node)
     : ModeBase(node, mode_settings),
       ParamContainer(),
       node_(node)
     {
       this->createMode();
       this->addChildContainer(this->mode_.get());
       vehicle_local_position_ = std::make_shared<px4_ros2::OdometryLocalPosition>(*this);
       vehicle_angular_velocity_ = std::make_shared<px4_ros2::OdometryAngularVelocity>(*this);
       vehicle_attitude_ = std::make_shared<px4_ros2::OdometryAttitude>(*this);
     }
   
     void createMode()
     {
       std::string node_namespace = node_.get_namespace();
       if (node_namespace.empty()) {
         node_namespace = "/";
       }
       // Remove the leading slash
       node_namespace = node_namespace.substr(1);
       mode_ = std::make_shared<ModeT>(node_namespace);
     }
   
     void setSetpoint(const ModeT::InputType & setpoint) {mode_->setInput(setpoint);}
   
     void setTfBuffer(std::shared_ptr<tf2_ros::Buffer> tf_buffer) {mode_->setTfBuffer(tf_buffer);}
   
   protected:
     void onActivate() override
     {
       odometryUpdate();
       this->mode_->reset();
     }
   
     void onDeactivate() override {}
   
     void odometryUpdate()
     {
       auto position = vehicle_local_position_->positionNed();
       auto velocity = vehicle_local_position_->velocityNed();
       auto attitude = vehicle_attitude_->attitude();
       auto angular_velocity = vehicle_angular_velocity_->angularVelocityFrd();
       if (!mode_) {
         RCLCPP_ERROR(node_.get_logger(), "Mode not initialized");
         return;
       }
       this->mode_->setCurrentOdometry(
         eigenNedToTf2Nwu(position),
         eigenNedToTf2Nwu(attitude),
         eigenNedToTf2Nwu(velocity),
         eigenNedToTf2Nwu(angular_velocity));
     }
   
     rclcpp::Node & node_;  
     std::shared_ptr<ModeT> mode_;  
   
     rclcpp::Publisher<ros2_uav_interfaces::msg::Coordinate>::SharedPtr coordinate_publisher_;
   
     std::shared_ptr<px4_ros2::OdometryLocalPosition> vehicle_local_position_;
     std::shared_ptr<px4_ros2::OdometryAngularVelocity> vehicle_angular_velocity_;
     std::shared_ptr<px4_ros2::OdometryAttitude> vehicle_attitude_;
   };
   
   }  // namespace ros2_uav::modes
